--- a/motorcycles.html
+++ b/motorcycles.html
@@ -57,7 +57,7 @@
       <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 moto"> -->
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a class="text-decoration-none text-reset" href="/motorcycles/bmw-r45.html">
-          <img class="img-fluid" src="/assets/motorcycles/moto1.jpg" alt="" />
+          <img class="img-fluid" src="/assets/motorcycles/main_bmw-r45.jpg" alt="" />
         </a>
         <div class="pt-3">
           <a class="text-decoration-none text-reset" href="/motorcycles/bmw-r45.html">
@@ -70,7 +70,7 @@
 
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a class="text-decoration-none text-reset" href="/motorcycles/yamaha-xs400.html">
-          <img class="img-fluid" src="/assets/motorcycles/moto2.jpg" alt="" />
+          <img class="img-fluid" src="/assets/motorcycles/main_yamaha-xs400.jpg" alt="" />
         </a>
         <div class="pt-3">
           <a class="text-decoration-none text-reset" href="/motorcycles/yamaha-xs400.html">
@@ -83,7 +83,7 @@
 
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a class="text-decoration-none text-reset" href="/motorcycles/honda-cj250t.html">
-          <img class="img-fluid" src="/assets/motorcycles/moto3.jpg" alt="" />
+          <img class="img-fluid" src="/assets/motorcycles/main_honda-cj250t.jpeg" alt="" />
         </a>
         <div class="pt-3">
           <a class="text-decoration-none text-reset" href="/motorcycles/honda-cj250t.html">
@@ -96,7 +96,7 @@
 
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a class="text-decoration-none text-reset" href="/motorcycles/triumph-scrambler-900.html">
-          <img class="img-fluid" src="/assets/motorcycles/moto4.jpg" alt="" />
+          <img class="img-fluid" src="/assets/motorcycles/main_triumph-scrambler-900.jpg" alt="" />
         </a>
         <div class="pt-3">
           <a class="text-decoration-none text-reset" href="/motorcycles/triumph-scrambler-900.html">
