--- a/motorcycles/honda-cj250t.html
+++ b/motorcycles/honda-cj250t.html
@@ -50,17 +50,92 @@
   </nav>
 
 <!-- content -->
-HONDA CJ250T
-<!-- end of content  -->
+<div class="container-fluid my-5">
+  <div class="row mx-3">
+    <div class="col-md-6 m-0 p-0">
+      <img class="img-fluid w-100" src="../assets/motorcycles/main_honda-cj250t.jpeg" alt="" />
+    </div>
+    <div class="col-md-6 m-0 p-0">
+      <h1 class="ps-4 pt-2">HONDA CJ250T</h1>
+      <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1978</p>
+      <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 250CC</p>
+    </div>
+    <div class="app1 col-md-6 m-0 p-0 pt-3">
+      <p>
+        <h2 class="ps-4 pt-2">SPECYFIKACJA</h2>
+        <ul>
+          <li>
+            Silnik:  kompletny serwis głowicy, serwis i synchronizacja gaźników pod zamontowane filtry stożkowe, wymiana oleju, ustawienie zapłonu.          </li>
+          <li>
+            Wzmocniony zestaw napędowy D.I.D.
+          </li>
+          <li>
+            Serwis hamulców
+          </li>
+          <li>
+            Serwis hamulców przednich i tylnych
+          </li>
+          <li>
+            Serwis przedniego zawieszenia
+          </li>
+          <li>
+            Wymiana łożysk tocznych w elementach eksploatacyjnych
+          </li>
+          <li>
+            Wycentrowanie kół
+          </li>
+        </ul>
+      </p>
+      <p>
+        <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
+        <ul>
+          <li>
+            Czarne elementy motocykla pomalowane proszkowo
+          </li>
+          <li>
+            Skrócona i zamknięta tylna część ramy
+          </li>
+          <li>
+            Kierownica typu fatbar
+          </li>
+          <li>
+            Przeniesienie stacyjki pod zbiornik paliwa
+          </li>
+          <li>
+            Ręcznie wykonana puszka na akumulator i elektrykę
+          </li>
+          <li>
+            Mini kierunkowskazy
+          </li>
+          <li>
+            Przednia lampa MZ ETZ 251
+          </li>
+          <li>
+            Tylna lampa LED
+          </li>
+          <li>
+            Oryginalne lusterko sygnowane logiem Hondy z epoki
+          </li>
+        </ul>
+      </p>
 
-<!-- <div class="container"> -->
-  <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 moto">
-    <div class="col bg-light">Motocykl1</div>
-    <div class="col bg-light">Motocykl2</div>
-    <div class="col bg-light">Motocykl3</div>
-    <div class="col bg-light">Motocykl4</div>
-  </div> -->
-<!-- </div> -->
+       <p>
+         Motocykl, który wymagał od nas dużo serca i cierpliwości. Kiedy go kupiliśmy nie odpalał,
+          a jego ówczesny właściciel najzwyczajniej nie miał czasu, aby przywrócić go do sprawności.
+          Zbudowany i inspirowany motocyklami z japońskiego garażu brat style. Prostota budowy i
+          łatwość obsługi to największe zalety tego motocykla. Wystarczy jeden kopniak w starter nożny,
+          aby mały dwucylindrowiec obudził się do życia. Ponadczasowa sylwetka i chromowane szprychowe
+          koła świetnie dopełnią wygląd każdego motocyklisty, który lubi z klasą poruszać się z punktu A do punktu B.
+        </p>
+    </div>
+    <div class="col-md-6 float-right m-0 p-0">
+      <div>
+      <img class="img-fluid w-100" src="/assets/motorcycles/content_honda-cj250t.jpg" alt="" />
+    </div>
+    </div>
+  </div>
+</div>
+<!-- end of content  -->
 
 <footer>
     <div class="footer">
