--- a/motorcycles/yamaha-xs400.html
+++ b/motorcycles/yamaha-xs400.html
@@ -49,18 +49,92 @@
     </div>
   </nav>
 
-<!-- content -->
-YAMAHA XS400
-<!-- end of content  -->
+<div class="container-fluid my-5">
+  <div class="row mx-3">
+    <div class="col-md-6 m-0 p-0">
+      <img class="img-fluid w-100" src="../assets/motorcycles/main_yamaha-xs400.jpg" alt="" />
+    </div>
+    <div class="col-md-6 m-0 p-0">
+      <h1 class="ps-4 pt-2">YAMAHA XS400</h1>
+      <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1977</p>
+      <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 400CC</p>
+    </div>
+    <div class="app1 col-md-6 m-0 p-0 pt-3">
+      <p>
+        <h2 class="ps-4 pt-2">SPECYFIKACJA</h2>
+        <ul>
+          <li>
+            Silnik: nowe pierścienie tłokowe, nowe panewki korbowodowe, serwis głowicy, ostry wałek rozrządu, synchronizacja gaźników, zamontowane filtry stożkowe.
+          </li>
+          <li>
+            Wzmocniony zestaw napędowy marki D.I.D.
+          </li>
+          <li>
+            Serwis hamulców
+          </li>
+          <li>
+            Serwis przedniego zawieszenia
+          </li>
+          <li>
+            Wymiana łożysk tocznych w elementach eksploatacyjnych
+          </li>
+        </ul>
+      </p>
+      <p>
+        <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
+        <ul>
+          <li>
+            Czarne elementy motocykla pomalowane proszkowo
+          </li>
+          <li>
+            Malowanie zbiornika inspirowane wyścigowymi modelami Yamahy z lat 70
+          </li>
+          <li>
+            Skrócona i zamknięta tylna część ramy
+          </li>
+          <li>
+            Zmodyfikowane mocowania tylnych amortyzatorów ( motocykl jest wyższy od oryginalnego egzemplarza)
+          </li>
+          <li>
+            Akcesoryjne amortyzatory tylne
+          </li>
+          <li>
+            Ręcznie wykonana puszka na akumulator i elektrykę
+          </li>
+          <li>
+            Przeniesienie dwustopniowej stacyjki pod siedzenie
+          </li>
+          <li>
+            Kierownica typu bobber
+          </li>
+          <li>
+            Mikroprzyciski  na kierownicy
+          </li>
+          <li>
+            Ręcznie wykonane mocowania przedniej lampy
+          </li>
+          <li>
+            Opony Dunlop
+          </li>
+        </ul>
+      </p>
 
-<!-- <div class="container"> -->
-  <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 moto">
-    <div class="col bg-light">Motocykl1</div>
-    <div class="col bg-light">Motocykl2</div>
-    <div class="col bg-light">Motocykl3</div>
-    <div class="col bg-light">Motocykl4</div>
-  </div> -->
-<!-- </div> -->
+       <p>
+        Motocykl zakupiony przez Nas jako zdekompletowany, jednak ze sporą ilością dodatkowych
+        części zamiennych. Jest to pierwszy rocznik produkcji Yamahy XS 400 2A2 z tylnym tarczowym
+        hamulcem. Celem naszej przebudowy było pokazanie sportowej natury tego motocykla, a jego
+        sylwetka miała przypominać „Flat trackery”, w których zachowuje się niezbędne minimum.
+        Zwarta i lekka konstrukcja pozwala na sprawne poruszanie się w miejskiej dżungli, ale równie
+        dobrze sprawdzi się  podczas wypadu poza miasto.
+        </p>
+    </div>
+    <div class="col-md-6 float-right m-0 p-0">
+      <div>
+      <img class="img-fluid w-100" src="/assets/motorcycles/content_yamaha-xs400.jpg" alt="" />
+    </div>
+    </div>
+  </div>
+</div>
 
 <footer>
     <div class="footer">
