--- a/motorcycles/bmw-r45.html
+++ b/motorcycles/bmw-r45.html
@@ -54,34 +54,74 @@
   <div class="container-fluid my-5">
     <div class="row mx-3">
       <div class="col-md-6 m-0 p-0">
-        <img class="img-fluid w-100" src="/assets/motorcycles/moto1.jpg" alt="" />
+        <img class="img-fluid w-100" src="../assets/motorcycles/main_bmw-r45.jpg" alt="" />
       </div>
       <div class="col-md-6 m-0 p-0">
         <h1 class="ps-4 pt-2">BMW R45</h1>
-        <p class="p-4"><i class="fa fa-long-arrow-right pe-md-2 pe-lg-4" aria-hidden="true"></i></i>ROCZNIK 1985</p>
-        <p class="p-4"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 500CC</p>
-        <p class="p-4"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>ROCZNIK 1985</p>
-        <p class="p-4"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 500CC</p>
-        <p class="p-4"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>ROCZNIK 1985</p>
+        <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1985</p>
+        <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 500CC</p>
       </div>
-      <div class="col-md-6 m-0 p-0 pt-3">
-         <p>ZOSTAŁY SYPIASKOWANE I POMALOWANE CZARNYM POŁYSKIEM PROSZKOWO. RĘCZNIE ROBIŁEM
-         KLASYCZNIE ZACZĄŁEM OD ROZEBRANIA GO DO OSTATNIEJ ŚRUBY. NASTĘPNIE CZARNE
-         ELEMENTY W I WYKLEPAŁEM.</p>
+      <div class="app1 col-md-6 m-0 p-0 pt-3">
+        <p>
+          <h2 class="ps-4 pt-2">SPECYFIKACJA</h2>
+          <ul>
+            <li>
+              Silnik: kompletny serwis głowic, serwis i synchronizacja gaźników, wymiana olejów i filtrów.
+            </li>
+            <li>
+              Kompletny serwis dyferencjału
+            </li>
+            <li>
+              Serwis przedniego zawieszenia
+            </li>
+            <li>
+              Serwis hamulców przednich i tylnych
+            </li>
+            <li>
+              Wymiana łożysk tocznych w elementach eksploatacyjnych
+            </li>
+          </ul>
+        </p>
+        <p>
+          <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
+          <ul>
+            <li>
+              Czarne elementy motocykla pomalowane proszkowo
+            </li>
+            <li>
+              Lakier marrakesh Brown z palety BMW
+            </li>
+            <li>
+              Ręcznie wykonane mocowania przedniej lampy
+            </li>
+            <li>
+              Kierownica typu bobber
+            </li>
+            <li>
+              Skrócona tylna część ramy
+            </li>
+            <li>
+              Lampa przednia MZ ETZ 251
+            </li>
+            <li>
+              Opony Avon MKII
+            </li>
+            <li>
+              Kierunkowskazy typu Mini Bullet
+            </li>
+          </ul>
+        </p>
 
-         <p>ZOSTAŁY SYPIASKOWANE I POMALOWANE CZARNYM POŁYSKIEM PROSZKOWO. RĘCZNIE ROBIŁEM
-         KLASYCZNIE ZACZĄŁEM OD ROZEBRANIA GO DO OSTATNIEJ ŚRUBY. NASTĘPNIE CZARNE
-         ELEMENTY W I WYKLEPAŁEM.</p>
-         <p>ZOSTAŁY SYPIASKOWANE I POMALOWANE CZARNYM POŁYSKIEM PROSZKOWO. RĘCZNIE ROBIŁEM
-         KLASYCZNIE ZACZĄŁEM OD ROZEBRANIA GO DO OSTATNIEJ ŚRUBY. NASTĘPNIE CZARNE
-         ELEMENTY W I WYKLEPAŁEM.</p>
-         <p>ZOSTAŁY SYPIASKOWANE I POMALOWANE CZARNYM POŁYSKIEM PROSZKOWO. RĘCZNIE ROBIŁEM
-         KLASYCZNIE ZACZĄŁEM OD ROZEBRANIA GO DO OSTATNIEJ ŚRUBY. NASTĘPNIE CZARNE
-         ELEMENTY W I WYKLEPAŁEM.</p>
+         <p>Jeden z pierwszych projektów naszego garażu. Motocykl kupiony pod niemiecką granicą,
+            gdzie czekał na wyrwanie z rąk handlarza samochodów. Inspiracją do jego budowy były
+            maszyny z francuskiego warsztatu Blitz Motorcycles. Głównym założeniem było uzyskanie
+            klasycznego wyglądu motocykli z lat 50 i 60 XX wieku. Motocykl uniwersalny i niezawodny,
+            którym można pewnie podróżować po drogach asfaltowych, ale również przemierzać szutrowe bezdroża.
+          </p>
       </div>
       <div class="col-md-6 float-right m-0 p-0">
         <div>
-        <img class="img-fluid w-100" src="/assets/motorcycles/moto3.jpg" alt="" />
+        <img class="img-fluid w-100" src="/assets/motorcycles/content_bmw-r45.jpg" alt="" />
       </div>
       </div>
     </div>
