--- a/motorcycles/triumph-scrambler-900.html
+++ b/motorcycles/triumph-scrambler-900.html
@@ -50,17 +50,89 @@
   </nav>
 
 <!-- content -->
-TRIUMPH SCRAMBLER 900
-<!-- end of content  -->
+<div class="container-fluid my-5">
+  <div class="row mx-3">
+    <div class="col-md-6 m-0 p-0">
+      <img class="img-fluid w-100" src="../assets/motorcycles/main_triumph-scrambler-900.jpg" alt="triumph-scrambler-900" />
+    </div>
+    <div class="col-md-6 m-0 p-0">
+      <h1 class="ps-4 pt-2">TRIUMPH SCRAMBLER 900</h1>
+      <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 2006</p>
+      <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 900CC</p>
+    </div>
+    <div class="app1 col-md-6 m-0 p-0 pt-3">
+      <p>
+        <h2 class="ps-4 pt-2">SPECYFIKACJA</h2>
+        <ul>
+          <li>
+            Serwis i synchronizacja gaźników, wymiana oleju i filtrów
+          <li>
+          <li>
+            Wzmocniony zestaw napędowy D.I.D
+          </li>
+          <li>
+            Serwis przedniego zawieszenia
+          </li>
+          <li>
+            Serwis hamulców
+          </li>
+          <li>
+            Usunięty system AIS
+          </li>
+        </ul>
+      </p>
+      <p>
+        <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
+        <ul>
+          <li>
+            Skrócona i zamknięta tylna część ramy
+          </li>
+          <li>
+            Zbiornik pomalowany w lakierze czarna perła
+          </li>
+          <li>
+            Od podstaw wykonane siedzenie” na odlewie z lekkiego materiału
+          </li>
+          <li>
+            Kierownica Tomaselli
+          </li>
+          <li>
+            Aluminiowe ręcznie wykonane błotniki
+          </li>
+          <li>
+            Aluminiowa ręcznie wykonana osłona pod silnik
+          </li>
+          <li>
+            Aluminiowa ręcznie wykonana osłona łańcucha
+          </li>
+          <li>
+            Kompletny układ wydechowy ZARD
+          </li>
+          <li>
+            Opony Continental TKC 80
+          </li>
+        </ul>
+      </p>
 
-<!-- <div class="container"> -->
-  <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 moto">
-    <div class="col bg-light">Motocykl1</div>
-    <div class="col bg-light">Motocykl2</div>
-    <div class="col bg-light">Motocykl3</div>
-    <div class="col bg-light">Motocykl4</div>
-  </div> -->
-<!-- </div> -->
+       <p>
+        Projekt, który wykonany został na Scrambler Fever Rally 2020. Triumph zjawił się na naszej
+        drodze bardzo szybko i od razu wiedzieliśmy, że musimy go mieć. Egzemplarz, który wpadł w
+        nasze ręce był  delikatnie zdekompletowany, ale posiadał szprychowe koła, silnik zasilany
+        gaźnikami i był już wyposażony w kompletny układ wydechowy marki ZARD, który świetnie
+        podkreśla charakterystykę pracy tego potężnego dwucylindrowca. Celem było zbudowanie klasycznego
+        angielskiego scramblera w stylu motocykli z lat 60. Motocykl jest pozbawiony  wszelkich dodatków,
+        nie posiada m in. kierunkowskazów i kontrolek. Jest zwinny i nie boi się żadnych przeszkód ani
+        najcięższego terenu.  To właśnie w takich warunkach motocykl daje największą radość z jazdy.
+        </p>
+    </div>
+    <div class="col-md-6 float-right m-0 p-0">
+      <div>
+      <img class="img-fluid w-100" src="/assets/motorcycles/content_triumph-scrambler-900.jpg" alt="triumph-scrambler-900" />
+    </div>
+    </div>
+  </div>
+</div>
+<!-- end of content  -->
 
 <footer>
     <div class="footer">
