dodany zakładkę i szkielet ekranu oferty, uzupełniono ekran o nas i warkot

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -44,26 +44,60 @@
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="warkot.html">WARKOT</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="motorcycles.html">MOTOCYKLE</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="aboutUs.html">O NAS</a></div>
+        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="offer.html">OFERTA</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="contact.html">KONTAKT</a></div>
       </div>
     </div>
   </nav>
 
 <!-- content -->
-about us
-<!-- end of content  -->
+<div class="container-fluid my-5">
+  <!-- <div class="row mx-3"> -->
+    <div class="row">
 
-<!-- <div class="container"> -->
-  <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 moto">
-    <div class="col bg-light">Motocykl1</div>
-    <div class="col bg-light">Motocykl2</div>
-    <div class="col bg-light">Motocykl3</div>
-    <div class="col bg-light">Motocykl4</div>
-  </div> -->
-<!-- </div> -->
+      <div class="col-md-6 p-xl-3 p-lg-2 p-md-1 p-xs-0">
+        <img class="img-fluid" src="assets/warkot_bracia1.jpg" alt="some alt">
+      </div>
+      <div class="col-md-6 p-xl-3 p-lg-2 p-md-1 p-xs-0">
+        <h2><b>WARKOT</b></h2>
+        <p class="app1 text-justify">
+          MACIEJ, MATEUSZ I MICHAŁ- JESTEŚMY BRAĆMI, KTÓRYCH POŁĄCZYŁA PASJA DO
+          KLASYCZNEJ MOTORYZACJI, A W SZCZEGÓLNOŚCI DO STARYCH MOTOCYKLI Z PRZEŁOMU LAT 60-80 XX WIEKU.
+        </p>
+        <p class="app1 text-justify">
+          WSZYSTKO ZACZĘŁO SIĘ W DZIECIŃSTWIE, KIEDY TO NASI OJCOWIE ZABIERALI NAS
+          NA PRZEJAŻDŻKI SWOIMI MOTOCYKLAMI. CZĘSTO TEŻ PRZYGLĄDALIŚMY SIĘ JAK JE
+          NAPRAWIALI, A DŹWIĘK SILNIKA PRZYWRÓCONEGO DO ŻYCIA I ZAPACH ŚWIEŻO WLANEJ
+          BENZYNY OD RAZU SPRAWIAŁ, ŻE MIELIŚMY UŚMIECH NA TWARZY.
+        </p>
+        <p class="app1 text-justify">
+          ZACZĘŁO SIĘ OD MOTORYNKI I KOMARA 2351, JEŹDZILIŚMY RÓWNIEŻ NA MOTOCYKLACH
+          ENDURO, A OBECNIE W GARAŻU MAMY M.IN. BMW R90/6, TRIUMPHA SCRAMBLERA 900, SUZUKI GS400.
+        </p>
+        <p class="app1 text-justify">
+          NASZYM CELEM JEST BUDOWANIE WYJĄTKOWYCH I NIETUZINKOWYCH MASZYN Z DUSZĄ, KTÓRE SŁUŻĄ
+          NIE TYLKO DO PRZEMIESZCZANIA SIĘ , ALE RÓWNIEŻ DAJĄ POCZUCIE WOLNOŚCI I FRAJDĘ Z JAZDY.
+        </p>
+
+      </div>
+
+
+      <div class="col-md-4 p-xl-3 p-lg-2 p-md-1 p-xs-0">
+        <img class="img-fluid" src="assets/warkot_mateusz2.jpg" alt="">
+      </div>
+      <div class="col-md-8 p-xl-3 p-lg-2 p-md-1 p-xs-0" >
+        <img class="img-fluid" src="assets/warkot_maciek.jpg" alt="some alt">
+      </div>
+      <div class="col p-xl-3 p-lg-2 p-md-1 p-xs-0">
+        <img class="img-fluid" src="assets/warkot_bracia2.jpg" alt="some alt">
+      </div>
+
+    </div>
+  </div>
+  <!-- end of content  -->
 
 <footer>
-    <div class="footer">
+    <div class="footer p-0 m-0">
   <div class="text-center py-4">
     ZNAJDZIESZ NAS:
   </div class="text-center">
