--- a/warkot.html
+++ b/warkot.html
@@ -44,15 +44,56 @@
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="warkot.html">WARKOT</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="motorcycles.html">MOTOCYKLE</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="aboutUs.html">O NAS</a></div>
+        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="offer.html">OFERTA</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="contact.html">KONTAKT</a></div>
       </div>
     </div>
   </nav>
 
-<!-- content -->
-warkot
-<!-- end of content  -->
+  <div class="container-fluid my-5">
+    <!-- <div class="row mx-3"> -->
+      <div class="row">
 
+        <div class="col-md-6 p-xl-3 p-lg-2 p-md-1 p-xs-0">
+          <h2><b>WARKOT</b></h2>
+          <p class="app1 text-justify">
+            WARKOT TO MIEJSCE, W KTÓRYM POWSTAJĄ WSZYSTKIE NASZE MASZYNY. MIEJSCE,
+            W KTÓRYM LECĄ ISKRY, A W POWIETRZU CZUĆ BENZYNĘ I OLEJ. TO TUTAJ NASZE
+            POMYSŁY I KONCEPCJE MAJĄ SWOJE REALNE ODZWIERCIEDLENIE. ZNAJDZIECIE NAS
+            W SKIERNIEWICACH- MIĘDZY ŁODZIĄ A WARSZAWĄ.
+          </p>
+          <p class="app1 text-justify">
+            INSPIRACJĄ DO BUDOWY SĄ GŁÓWNIE MOTOCYKLE Z LAT 60 I 70 XX WIEKU, W
+            KTÓRYCH STAWIANO NA WYSOKIEJ JAKOŚCI MATERIAŁY I RZEMIEŚLNICZĄ PRACĘ.
+            W NASZYCH PROJEKTACH ZAWSZE SKUPIAMY SIĘ NA PROSTOCIE BUDOWY I
+            DOPRACOWANIU WSZELKICH DETALI.
+          </p>
+        </div>
+        <div class="col-md-6 p-xl-3 p-lg-2 p-md-1 p-xs-0">
+          <img class="img-fluid" src="assets/warkot_silnik.jpg" alt="some alt">
+        </div>
+
+        <div class="col-md-4 p-xl-3 p-lg-2 p-md-1 p-xs-0">
+          <img class="img-fluid" src="assets/warkot_klucze.jpg" alt="">
+        </div>
+        <div class="col-md-4 p-xl-3 p-lg-2 p-md-1 p-xs-0" >
+          <img class="img-fluid" src="assets/warkot_tabliczka.jpg" alt="some alt">
+
+          <p class="app1 pt-xl-3 pt-lg-2 pt-md-1 pt-xs-0">
+            JEDNAK PRZEDE WSZYSTKIM NASZYM CELEM JEST PRZEMYCENIE DUCHA DAWNEJ
+            MOTORYZACJI. BUDUJEMY MOTOCYKLE M.IN. W STYLU SCRAMBLER, FLAT TRACKER,
+            BRAT STYLE. ZDAJEMY SOBIE SPRAWĘ, ŻE KAŻDEGO ROKU NA RYNEK WCHODZĄ
+            NOWOCZESNE MASZYNY, ALE MY SWOJĄ PRACĄ CHCEMY UDOWODNIĆ, ŻE STARSZE
+            SPRZĘTY WCALE NIE NADAJĄ SIĘ NA ZŁOM! WYBIERAMY DROGĘ RECYKLINGU I
+            DAJEMY KLASYKOM DRUGIE ŻYCIE ☺
+          </p>
+        </div>
+        <div class="col-md-4 p-xl-3 p-lg-2 p-md-1 p-xs-0">
+          <img class="img-fluid" src="assets/warkot_iskry.jpg" alt="some alt">
+        </div>
+
+      </div>
+    </div
 <footer>
     <div class="footer">
   <div class="text-center py-4">
