--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="warkot.html">WARKOT</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="motorcycles.html">MOTOCYKLE</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="aboutUs.html">O NAS</a></div>
+        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="offer.html">OFERTA</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="contact.html">KONTAKT</a></div>
       </div>
     </div>
