refactor margin/padding and fonts

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -13,15 +13,17 @@
   <link rel="stylesheet" href="assets/css/styles.css?v=1.0">
   <link rel="stylesheet" href="assets/css/footer.css?v=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
   <header role="banner">
     <!-- <div class="container"> -->
-    <div class="row">
+    <div class="row m-0 p-0">
       <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/logo.jpg" width="200" alt="Logo Thing main logo"></a>
+        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
       </div>
 
       <div class="col text-end header-social-media">
@@ -55,26 +57,26 @@
   <!-- <div class="row mx-3"> -->
     <div class="row">
 
-      <div class="col-md-6 p-xl-3 p-lg-2 p-md-1 p-xs-0">
+      <div class="col-md-6 px-2 pb-2">
         <img class="img-fluid" src="assets/warkot_bracia1.jpg" alt="some alt">
       </div>
-      <div class="col-md-6 p-xl-3 p-lg-2 p-md-1 p-xs-0">
-        <h2><b>WARKOT</b></h2>
-        <p class="app1 text-justify">
-          MACIEJ, MATEUSZ I MICHAŁ- JESTEŚMY BRAĆMI, KTÓRYCH POŁĄCZYŁA PASJA DO
+      <div class="col-md-6 px-2 pb-2">
+        <h2 class="ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>WARKOT</b></h2>
+        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+          MACIEJ, MATEUSZ I MICHAŁ - JESTEŚMY BRAĆMI, KTÓRYCH POŁĄCZYŁA PASJA DO
           KLASYCZNEJ MOTORYZACJI, A W SZCZEGÓLNOŚCI DO STARYCH MOTOCYKLI Z PRZEŁOMU LAT 60-80 XX WIEKU.
         </p>
-        <p class="app1 text-justify">
+        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
           WSZYSTKO ZACZĘŁO SIĘ W DZIECIŃSTWIE, KIEDY TO NASI OJCOWIE ZABIERALI NAS
           NA PRZEJAŻDŻKI SWOIMI MOTOCYKLAMI. CZĘSTO TEŻ PRZYGLĄDALIŚMY SIĘ JAK JE
           NAPRAWIALI, A DŹWIĘK SILNIKA PRZYWRÓCONEGO DO ŻYCIA I ZAPACH ŚWIEŻO WLANEJ
           BENZYNY OD RAZU SPRAWIAŁ, ŻE MIELIŚMY UŚMIECH NA TWARZY.
         </p>
-        <p class="app1 text-justify">
+        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
           ZACZĘŁO SIĘ OD MOTORYNKI I KOMARA 2351, JEŹDZILIŚMY RÓWNIEŻ NA MOTOCYKLACH
           ENDURO, A OBECNIE W GARAŻU MAMY M.IN. BMW R90/6, TRIUMPHA SCRAMBLERA 900, SUZUKI GS400.
         </p>
-        <p class="app1 text-justify">
+        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
           NASZYM CELEM JEST BUDOWANIE WYJĄTKOWYCH I NIETUZINKOWYCH MASZYN Z DUSZĄ, KTÓRE SŁUŻĄ
           NIE TYLKO DO PRZEMIESZCZANIA SIĘ , ALE RÓWNIEŻ DAJĄ POCZUCIE WOLNOŚCI I FRAJDĘ Z JAZDY.
         </p>
@@ -82,13 +84,13 @@
       </div>
 
 
-      <div class="col-md-4 p-xl-3 p-lg-2 p-md-1 p-xs-0">
-        <img class="img-fluid" src="assets/warkot_mateusz2.jpg" alt="">
+      <div class="col-md-4 ps-2 pe-1 pb-2">
+        <img class="img-fluid" src="assets/warkot_mateusz7.jpg" alt="">
       </div>
-      <div class="col-md-8 p-xl-3 p-lg-2 p-md-1 p-xs-0" >
+      <div class="col-md-8 ps-1 pe-2 pb-2" >
         <img class="img-fluid" src="assets/warkot_maciek.jpg" alt="some alt">
       </div>
-      <div class="col p-xl-3 p-lg-2 p-md-1 p-xs-0">
+      <div class="col ps-2 pe-2">
         <img class="img-fluid" src="assets/warkot_bracia2.jpg" alt="some alt">
       </div>
 
@@ -97,7 +99,7 @@
   <!-- end of content  -->
 
 <footer>
-    <div class="footer p-0 m-0">
+    <div class="footer">
   <div class="text-center py-4">
     ZNAJDZIESZ NAS:
   </div class="text-center">
