--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,17 @@
   <link rel="stylesheet" href="assets/css/styles.css?v=1.0">
   <link rel="stylesheet" href="assets/css/footer.css?v=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
+  
 </head>
 
 <body>
   <header role="banner">
     <!-- <div class="container"> -->
-    <div class="row">
+    <div class="row m-0 p-0">
       <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/logo.jpg" width="200" alt="Logo Thing main logo"></a>
+        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
       </div>
 
       <div class="col text-end header-social-media">
@@ -67,7 +69,7 @@
       <address> Asnyka 9/30<br/> 96-100 Skierniewice</address>
     </div>
     <div class="col-md">
-      <img id="motorcycle-scratch" class ="img-fluid text-end" src="assets/motorcycle_scratch.jpg" alt="motocykl">
+      <img id="motorcycle-scratch" class ="img-fluid text-end" src="assets/motorcycle_scratch3.png" alt="motocykl">
     </div>
   </div>
 </div
