--- a/motorcycles.html
+++ b/motorcycles.html
@@ -14,15 +14,17 @@
   <link rel="stylesheet" href="assets/css/styles.css?v=1.0">
   <link rel="stylesheet" href="assets/css/footer.css?v=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
+  
 </head>
 
 <body>
   <header role="banner">
     <!-- <div class="container"> -->
-    <div class="row">
+    <div class="row m-0 p-0">
       <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/logo.jpg" width="200" alt="Logo Thing main logo"></a>
+        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
       </div>
 
       <div class="col text-end header-social-media">
@@ -83,19 +85,6 @@
       </div>
 
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <a class="text-decoration-none text-reset" href="/motorcycles/honda-cj250t.html">
-          <img class="img-fluid" src="/assets/motorcycles/main_honda-cj250t.jpeg" alt="" />
-        </a>
-        <div class="pt-3">
-          <a class="text-decoration-none text-reset" href="/motorcycles/honda-cj250t.html">
-            <h2 class="moto-gallery-header pb-1 m-0">HONDA CJ250T</h2>
-          </a>
-          <p class="moto-gallery-desc p0 m-0">Rocznik 1985</p>
-          <p class="moto-gallery-desc p0 m-0">Pojemność 500CC</p>
-        </div>
-      </div>
-
-      <div class="col-sm-6 col-md-4 col-lg-3">
         <a class="text-decoration-none text-reset" href="/motorcycles/triumph-scrambler-900.html">
           <img class="img-fluid" src="/assets/motorcycles/main_triumph-scrambler-900.jpg" alt="" />
         </a>
@@ -107,7 +96,20 @@
           <p class="moto-gallery-desc p0 m-0">Pojemność 500CC</p>
         </div>
       </div>
+
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <a class="text-decoration-none text-reset" href="/motorcycles/honda-cj250t.html">
+        <img class="img-fluid" src="/assets/motorcycles/main_honda-cj250t.jpeg" alt="" />
+      </a>
+      <div class="pt-3">
+        <a class="text-decoration-none text-reset" href="/motorcycles/honda-cj250t.html">
+          <h2 class="moto-gallery-header pb-1 m-0">HONDA CJ250T</h2>
+        </a>
+        <p class="moto-gallery-desc p0 m-0">Rocznik 1985</p>
+        <p class="moto-gallery-desc p0 m-0">Pojemność 500CC</p>
+      </div>
     </div>
+  </div>
 
   </div>
 
