--- a/offer.html
+++ b/offer.html
@@ -13,15 +13,17 @@
   <link rel="stylesheet" href="assets/css/styles.css?v=1.0">
   <link rel="stylesheet" href="assets/css/footer.css?v=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
   <header role="banner">
     <!-- <div class="container"> -->
-    <div class="row">
+    <div class="row m-0 p-0">
       <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/logo.jpg" width="200" alt="Logo Thing main logo"></a>
+        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
       </div>
 
       <div class="col text-end header-social-media">
@@ -51,7 +53,46 @@
   </nav>
 
 <!-- content -->
-OFERTA
+<div class="container-fluid my-5">
+  <div class="row">
+
+    <div class="col-md-7 px-2 pb-2">
+      <h2 class="ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>OFERTA</b></h2>
+      <p class="page_offer_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        ZACHĘCAMY DO KONTAKTU ZARÓWNO POSIADACZY KLASYCZNYCH MOTOCYKLI,
+        JAK I POSZUKIWACZY TAKICH SPRZĘTÓW. OFERUJEMY DWIE OPCJE WSPÓŁPRACY:
+      </p>
+      <p class="page_offer_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        MASZ SWÓJ SPRZĘT I CHCIAŁBYŚ GO ODNOWIĆ, DAĆ MU DRUGIE ŻYCIE LUB KOMPLETNIE
+        ZMODYFIKOWAĆ. ROZMAWIAMY O MOŻLIWOŚCIACH, POZNAJEMY CIEBIE I TWOJE UPODOBANIA.
+        NA TEJ PODSTAWIE PROPONUJEMY CI KILKA OPCJI MODYFIKACJI – EKONOMICZNĄ, UNIWERSALNĄ
+        LUB NA WYPASIE☺<br/>
+        WYCENA ZALEŻY OD STANU TWOJEGO SPRZĘTU, ILOŚCI I WIELKOŚCI PRZERÓBEK.
+        DO KAŻDEGO PROJEKTU PODCHODZIMY INDYWIDUALNIE.
+      </p>
+    </div>
+    <div class="col-md-5 px-2 pb-2">
+      <img class="img-fluid" src="assets/warkot_offer_drift.jpg" alt="some alt">
+    </div>
+  </div>
+
+  <div class="row d-flex align-items-end pt-2">
+
+    <div class="col-md-5 ps-2 pe-1">
+      <img class="img-fluid" src="assets/warkot_offer_maciek.jpg" alt="">
+    </div>
+    <div class="col-md-7 ps-1 pe-2">
+      <p class="page_offer_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-5 pb-lg-4 pb-md-2">
+        NIE MASZ SPRZĘTU, ALE CHCIAŁBYŚ MIEĆ. NIC TRUDNEGO – POROZMAWIAMY O TWOICH OCZEKIWANIACH
+        I MY ZNAJDZIEMY GO DLA CIEBIE. ZAKUPIMY I PRZETRANSPORTUJEMY DO NASZEGO GARAŻU, A PÓŹNIEJ
+        ZACZNIE SIĘ CAŁA ZABAWA ☺<br/>
+        WYCENA JEST NA TAKIEJ SAMEJ ZASADZIE JAK WYŻEJ.
+      </p>
+      <img class="img-fluid" src="assets/warkot_offer_rajdowiec.jpg" alt="some alt">
+    </div>
+  </div>
+
+</div>
 <!-- end of content  -->
 
 <footer>
