--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -13,18 +14,20 @@
   <link rel="stylesheet" href="assets/css/styles.css?v=1.0">
   <link rel="stylesheet" href="assets/css/footer.css?v=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
+  
 </head>
 
 <body>
   <header role="banner">
     <!-- <div class="container"> -->
-    <div class="row">
+    <div class="row m-0 p-0">
       <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/logo.jpg" width="200" alt="Logo Thing main logo"></a>
+        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
       </div>
 
-      <div class="col text-end header-social-media">
+      <div class="col text-end header-social-media m-0 p-0">
         <ul class="social-network">
           <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-5x header-ico"></i></a></li>
           <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-5x header-ico"></i></a></li>
@@ -50,38 +53,59 @@
     </div>
   </nav>
 
-<!-- content -->
-index
-<!-- end of content  -->
 
-<!-- <div class="container"> -->
-  <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 moto">
-    <div class="col bg-light">Motocykl1</div>
-    <div class="col bg-light">Motocykl2</div>
-    <div class="col bg-light">Motocykl3</div>
-    <div class="col bg-light">Motocykl4</div>
-  </div> -->
-<!-- </div> -->
+  <!-- content -->
+  <div class="container-fluid my-5 p-0">
+    <!-- <div class="row mx-3"> -->
+    <div class="row mx-0 p-0 pb-2">
 
-<footer>
+      <div class="col p-0">
+        <img class="img-fluid" src="assets/warkot_start_triumph.jpg" alt="some alt">
+      </div>
+    </div>
+    <div class="row mx-0 p-0">
+
+      <div class="col-md-4 p-0">
+        <div class="row">
+          <div class="col-md-12 pb-2">
+
+            <img class="img-fluid" src="assets/warkot_start_silnik.jpg" alt="">
+          </div>
+          <div class="col-md-12">
+
+            <img class="img-fluid" src="assets/warkot_start_droga4.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
+        <div class="col-md-8 pe-0 ps-2">
+          <img class="img-fluid" src="assets/warkot_start_kaluza.jpg" alt="some alt">
+        </div>
+
+    </div>
+  </div>
+  <!-- end of content  -->
+
+  <footer>
     <div class="footer">
-  <div class="text-center py-4">
-    ZNAJDZIESZ NAS:
-  </div class="text-center">
+      <div class="text-center py-4">
+        ZNAJDZIESZ NAS:
+      </div class="text-center">
 
-    <ul class="social-network social-circle p-0">
-      <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li>
-      <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-      <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-    </ul>
-    <div id="copyright-note">
-    &copy; Copyright 2020 Kamil Tartanus
-  </div>
-  </div>
+      <ul class="social-network social-circle p-0">
+        <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li>
+        <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+        <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+      </ul>
+      <div id="copyright-note">
+        &copy; Copyright 2020 Kamil Tartanus
+      </div>
+    </div>
   </footer>
 
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
+
 </html>
