--- a/motorcycles/bmw-r45.html
+++ b/motorcycles/bmw-r45.html
@@ -20,9 +20,9 @@
 <body>
   <header role="banner">
     <!-- <div class="container"> -->
-    <div class="row">
+    <div class="row m-0 p-0">
       <div class="col banner-logo">
-        <a href="../index.html"><img id="logo-main" src="../assets/logo.jpg" width="200" alt="Logo Thing main logo"></a>
+        <a href="../index.html"><img id="logo-main" src="../assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
       </div>
 
       <div class="col text-end header-social-media">
