--- a/motorcycles/triumph-scrambler-900.html
+++ b/motorcycles/triumph-scrambler-900.html
@@ -13,15 +13,17 @@
   <link rel="stylesheet" href="../assets/css/styles.css?v=1.0">
   <link rel="stylesheet" href="../assets/css/footer.css?v=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
+  
 </head>
 
 <body>
   <header role="banner">
     <!-- <div class="container"> -->
-    <div class="row">
-      <div class="col banner-logo">
-        <a href="../index.html"><img id="logo-main" src="../assets/logo.jpg" width="200" alt="Logo Thing main logo"></a>
+    <div class="row m-0 p-0 ">
+      <div class="col banner-logo ps-3 pt-3">
+        <a href="../index.html"><img id="logo-main" src="../assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
       </div>
 
       <div class="col text-end header-social-media">
@@ -60,7 +62,13 @@
       <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 2006</p>
       <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 900CC</p>
     </div>
-    <div class="app1 col-md-6 m-0 p-0 pt-3">
+    <div class="col-md-6 float-right m-0 p-0 pt-5">
+      <div>
+      <img class="img-fluid w-100" src="/assets/motorcycles/content_triumph-scrambler-900.jpg" alt="triumph-scrambler-900" />
+    </div>
+    </div>
+
+    <div class="app1 col-md-6 m-0 p-0 pt-3 ">
       <p>
         <h2 class="ps-4 pt-2">SPECYFIKACJA</h2>
         <ul>
@@ -125,11 +133,7 @@
         najcięższego terenu.  To właśnie w takich warunkach motocykl daje największą radość z jazdy.
         </p>
     </div>
-    <div class="col-md-6 float-right m-0 p-0">
-      <div>
-      <img class="img-fluid w-100" src="/assets/motorcycles/content_triumph-scrambler-900.jpg" alt="triumph-scrambler-900" />
-    </div>
-    </div>
+
   </div>
 </div>
 <!-- end of content  -->
