--- a/warkot.html
+++ b/warkot.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -13,15 +14,17 @@
   <link rel="stylesheet" href="assets/css/styles.css?v=1.0">
   <link rel="stylesheet" href="assets/css/footer.css?v=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
   <header role="banner">
     <!-- <div class="container"> -->
-    <div class="row">
+    <div class="row m-0 p-0">
       <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/logo.jpg" width="200" alt="Logo Thing main logo"></a>
+        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
       </div>
 
       <div class="col text-end header-social-media">
@@ -52,67 +55,72 @@
 
   <div class="container-fluid my-5">
     <!-- <div class="row mx-3"> -->
-      <div class="row">
+    <div class="row">
 
-        <div class="col-md-6 p-xl-3 p-lg-2 p-md-1 p-xs-0">
-          <h2><b>WARKOT</b></h2>
-          <p class="app1 text-justify">
-            WARKOT TO MIEJSCE, W KTÓRYM POWSTAJĄ WSZYSTKIE NASZE MASZYNY. MIEJSCE,
-            W KTÓRYM LECĄ ISKRY, A W POWIETRZU CZUĆ BENZYNĘ I OLEJ. TO TUTAJ NASZE
-            POMYSŁY I KONCEPCJE MAJĄ SWOJE REALNE ODZWIERCIEDLENIE. ZNAJDZIECIE NAS
-            W SKIERNIEWICACH- MIĘDZY ŁODZIĄ A WARSZAWĄ.
-          </p>
-          <p class="app1 text-justify">
-            INSPIRACJĄ DO BUDOWY SĄ GŁÓWNIE MOTOCYKLE Z LAT 60 I 70 XX WIEKU, W
-            KTÓRYCH STAWIANO NA WYSOKIEJ JAKOŚCI MATERIAŁY I RZEMIEŚLNICZĄ PRACĘ.
-            W NASZYCH PROJEKTACH ZAWSZE SKUPIAMY SIĘ NA PROSTOCIE BUDOWY I
-            DOPRACOWANIU WSZELKICH DETALI.
-          </p>
-        </div>
-        <div class="col-md-6 p-xl-3 p-lg-2 p-md-1 p-xs-0">
-          <img class="img-fluid" src="assets/warkot_silnik.jpg" alt="some alt">
-        </div>
-
-        <div class="col-md-4 p-xl-3 p-lg-2 p-md-1 p-xs-0">
-          <img class="img-fluid" src="assets/warkot_klucze.jpg" alt="">
-        </div>
-        <div class="col-md-4 p-xl-3 p-lg-2 p-md-1 p-xs-0" >
-          <img class="img-fluid" src="assets/warkot_tabliczka.jpg" alt="some alt">
-
-          <p class="app1 pt-xl-3 pt-lg-2 pt-md-1 pt-xs-0">
-            JEDNAK PRZEDE WSZYSTKIM NASZYM CELEM JEST PRZEMYCENIE DUCHA DAWNEJ
-            MOTORYZACJI. BUDUJEMY MOTOCYKLE M.IN. W STYLU SCRAMBLER, FLAT TRACKER,
-            BRAT STYLE. ZDAJEMY SOBIE SPRAWĘ, ŻE KAŻDEGO ROKU NA RYNEK WCHODZĄ
-            NOWOCZESNE MASZYNY, ALE MY SWOJĄ PRACĄ CHCEMY UDOWODNIĆ, ŻE STARSZE
-            SPRZĘTY WCALE NIE NADAJĄ SIĘ NA ZŁOM! WYBIERAMY DROGĘ RECYKLINGU I
-            DAJEMY KLASYKOM DRUGIE ŻYCIE ☺
-          </p>
-        </div>
-        <div class="col-md-4 p-xl-3 p-lg-2 p-md-1 p-xs-0">
-          <img class="img-fluid" src="assets/warkot_iskry.jpg" alt="some alt">
-        </div>
-
+      <div class="col-md-6 p-2 pb-2">
+        <h2 class="ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>WARKOT</b></h2>
+        <p class="page_warkot_font text-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+          WARKOT TO MIEJSCE, W KTÓRYM POWSTAJĄ WSZYSTKIE NASZE MASZYNY. MIEJSCE,
+          W KTÓRYM LECĄ ISKRY, A W POWIETRZU CZUĆ BENZYNĘ I OLEJ. TO TUTAJ NASZE
+          POMYSŁY I KONCEPCJE MAJĄ SWOJE REALNE ODZWIERCIEDLENIE. ZNAJDZIECIE NAS
+          W SKIERNIEWICACH- MIĘDZY ŁODZIĄ A WARSZAWĄ.
+        </p>
+        <p class="page_warkot_font text-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+          INSPIRACJĄ DO BUDOWY SĄ GŁÓWNIE MOTOCYKLE Z LAT 60 I 70 XX WIEKU, W
+          KTÓRYCH STAWIANO NA WYSOKIEJ JAKOŚCI MATERIAŁY I RZEMIEŚLNICZĄ PRACĘ.
+          W NASZYCH PROJEKTACH ZAWSZE SKUPIAMY SIĘ NA PROSTOCIE BUDOWY I
+          DOPRACOWANIU WSZELKICH DETALI.
+        </p>
       </div>
-    </div
-<footer>
-    <div class="footer">
-  <div class="text-center py-4">
-    ZNAJDZIESZ NAS:
-  </div class="text-center">
+      <div class="col-md-6 px-2 pb-2">
+        <img class="img-fluid" src="assets/warkot_silnik.jpg" alt="some alt">
+      </div>
+    </div>
 
-    <ul class="social-network social-circle p-0">
-      <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li>
-      <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-      <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-    </ul>
-    <div id="copyright-note">
-    &copy; Copyright 2020 Kamil Tartanus
+    <div class="row d-flex align-items-end">
+
+      <div class="col-md-4 ps-2 pe-1 pb-2">
+        <img class="img-fluid" src="assets/warkot_klucze.jpg" alt="">
+      </div>
+      <div class="col-md-4 ps-1 pe-1 pb-2">
+        <p class="page_warkot_font text-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-5 pb-lg-4 pb-md-2">
+          JEDNAK PRZEDE WSZYSTKIM NASZYM CELEM JEST PRZEMYCENIE DUCHA DAWNEJ
+          MOTORYZACJI. BUDUJEMY MOTOCYKLE M.IN. W STYLU SCRAMBLER, FLAT TRACKER,
+          BRAT STYLE. ZDAJEMY SOBIE SPRAWĘ, ŻE KAŻDEGO ROKU NA RYNEK WCHODZĄ
+          NOWOCZESNE MASZYNY, ALE MY SWOJĄ PRACĄ CHCEMY UDOWODNIĆ, ŻE STARSZE
+          SPRZĘTY WCALE NIE NADAJĄ SIĘ NA ZŁOM! WYBIERAMY DROGĘ RECYKLINGU I
+          DAJEMY KLASYKOM DRUGIE ŻYCIE ☺
+        </p>
+
+        <img class="img-fluid" src="assets/warkot_tabliczka.jpg" alt="some alt">
+      </div>
+      <div class="col-md-4 ps-1 pe-2 pb-2">
+        <img class="img-fluid" src="assets/warkot_iskry.jpg" alt="some alt">
+      </div>
+    </div>
+
   </div>
-  </div>
+
+  <footer>
+    <div class="footer">
+      <div class="text-center py-4">
+        ZNAJDZIESZ NAS:
+      </div class="text-center">
+
+      <ul class="social-network social-circle p-0">
+        <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li>
+        <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+        <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+      </ul>
+      <div id="copyright-note">
+        &copy; Copyright 2020 Kamil Tartanus
+      </div>
+    </div>
   </footer>
 
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
+
 </html>
